src/test/deca/context/valid/class/surcharge/surcharge.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class B {

}

class A {
	void m() {}
	void m(int a) {}
	void m(float a) {}
	void m(boolean a) {}
	void m(String a) {}
	void m(A a) {}
	void m(B a) {}
}

{
	A b;
	b.m();
}

